www(исправление бага): fix index wrap
fix index wrap

--- a/www/src/components/toc-menu__item__index/toc-menu-item__index.scss
+++ b/www/src/components/toc-menu__item__index/toc-menu-item__index.scss
@@ -258,6 +258,8 @@
 //border-color: inherit;
 
 .toc-menu-item__index{
+  white-space: nowrap;
+
   width: 48px;
 
   flex-basis: 0;
